# iot_assignments

./: .gitignore
assignment_01/: Makefile  MqttFunc.java  MqttMovingAverage.java  MqttSignalGenerator.java  README.md
assignment_01/simple-java-test-harness/: README.md
assignment_01/simple-java-test-harness/src/: Makefile  OutputLogger.java
assignment_02/transmit-cycle/: Cargo.toml  openocd.gdb
assignment_02/transmit-cycle/src/: main.rs
