[package]
name = "transmit-cycle"
version = "0.1.0"
authors = ["dueruen <32197042+dueruen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.3"
panic-itm = "0.4.0"
f3 = "0.6.1"
nb = "1.0.0"

# [dependencies.f3]
# features = ["rt"]
# version = "0.6.1"